# Roomba_robot_vacuum_cleaner

./: CMakeLists.txt  LICENSE.txt  README.md  package.xml
environment/: env.world
include/: DepthCalculation.hpp  depthCalculator.hpp  walker.hpp
launch/: roomba.launch
results/: cppcheck.txt  cpplint.txt  rosbag_info.txt
src/: DepthCalculation.cpp  depthCalculator.cpp  main.cpp  walker.cpp
